--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/open-rpc/design/8808b8abe5b46a76bb8cbfb247f88a0219f2fb78/art-src/open-rpc-logo-noText.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>OpenRPC API Test HTML Reporter</title>
   </head>
   <body>
     <div id="root"></div>
